fix: fix overflow x window, add mobile menu on non-hover-devices

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  box-sizing: border-box;
   font-family: "Kumbh Sans";
   font-variation-settings:
     "wght" 300,
